# lll

./: Cargo.toml  README.md
.github/workflows/: CICD.yml
src/: common.rs  config.rs  main.rs  mime_types.rs  urls_table.rs
src/static/: template.html
test/: index.css  index.html  index.js
