[package]
name = "lll"
version = "0.1.0"
authors = ["Prajwal Chapagain <prajwal.chapagain58@gmail.com>"]
edition = "2021"
description = "A simple local http server for serving files quickly!!"
readme = "README.md"
homepage = "https://github.com/PrajwalCH/lll"
repository = "https://github.com/PrajwalCH/lll"
license = "MIT"

[dependencies]
anyhow = "1.0.77"
getopts = "0.2.21"
tiny_http = "0.12.0"
